added welcome page css

--- a/Frontend/rapid-cart/public/index.html
+++ b/Frontend/rapid-cart/public/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
+  <link rel="stylesheet" href="/rapid-cart/components/styles/welcomepage.css">
   <div id="root"></div>
 </head>
 </body>
