--- a/Frontend/rapid-cart/public/index.html
+++ b/Frontend/rapid-cart/public/index.html
@@ -3,8 +3,12 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
+  <link rel="rapidicon" href="RapidCartLogo.png"/>
   <link rel="stylesheet" href="/rapid-cart/components/styles/welcomepage.css">
   <div id="root"></div>
 </head>
+<body>
+
+</body>
 </body>
 </html>
